--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -38,10 +38,7 @@ from enum import IntEnum
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import RegisterWriteVerifyError, UnsupportedWidthError
 
 from ..reg_model.{{top_node.inst_name}} import {{top_node.inst_name}}_cls
-{% for property_enum in dependent_property_enum %}
-from ..reg_model.{{top_node.inst_name}} import {{property_enum.type_name}}_property_enumcls
-{% endfor %}
-
+from ..reg_model.{{top_node.inst_name}}_property_enums import *
 
 {% if asyncoutput %}
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite
