--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -113,28 +113,30 @@ from .{{top_node.inst_name}}_property_enums import {{property_enum.type_name}}_p
         {{ register_class_attributes(node) }}
     {%- elif isinstance(node, systemrdlMemNode) %}
         {%- if node.is_array %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array(address=self.address+{{node.raw_address_offset}},
-                                                                              stride={{node.array_stride}},
-                                                                              dimensions=tuple({{node.array_dimensions}}),
-                                                                              logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                              inst_name='{{node.inst_name}}', parent=self)
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array = {{get_fully_qualified_type_name(node)}}_array(address=self.address+{{node.raw_address_offset}},
+                                                                                  stride={{node.array_stride}},
+                                                                                  dimensions=tuple({{node.array_dimensions}}),
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self)
         {%- else %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}(address=self.address+{{node.address_offset}},
-                                                                        logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                        inst_name='{{node.inst_name}}', parent=self)
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}} = {{get_fully_qualified_type_name(node)}}(
+                                                                 address=self.address+{{node.address_offset}},
+                                                                 logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                   inst_name='{{node.inst_name}}', parent=self)
         {%- endif %}
     {%- elif isinstance(node, systemrdlRegfileNode) or isinstance(node, systemrdlAddrmapNode) %}
         {%- if node.is_array %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array(address=self.address+{{node.raw_address_offset}},
-                                                                              stride={{node.array_stride}},
-                                                                              dimensions=tuple({{node.array_dimensions}}),
-                                                                              logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                              inst_name='{{node.inst_name}}', parent=self)
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array = {{get_fully_qualified_type_name(node)}}_array(address=self.address+{{node.raw_address_offset}},
+                                                                                  stride={{node.array_stride}},
+                                                                                  dimensions=tuple({{node.array_dimensions}}),
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self)
         {%- else -%}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}(address=self.address+{{node.address_offset}},
-                                                                        logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                        inst_name='{{node.inst_name}}',
-                                                                        parent=self)
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}} = {{get_fully_qualified_type_name(node)}}(
+                                                                            address=self.address+{{node.address_offset}},
+                                                                            logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                            inst_name='{{node.inst_name}}',
+                                                                            parent=self)
         {%- endif %}
     {%- endif %}
     {%- endif %}
