--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -20,6 +20,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% from 'addrmap_universal_property.py.jinja' import universal_properties with context %}
 {% from 'addrmap_system_rdl_name_mapping.py.jinja' import get_child_by_system_rdl_name with context %}
 {% from 'addrmap_system_rdl_name_mapping.py.jinja' import systemrdl_python_child_name_map with context %}
+{% from 'child_definitions.py.jinja' import field_children_iterator with context %}
 
 {%- macro register_class(node) %}
 class {{node.python_class_name}}({{node.base_class(asyncoutput)}}):
@@ -56,10 +57,8 @@ class {{node.python_class_name}}({{node.base_class(asyncoutput)}}):
             parent_register=self,
             size_props=FieldSizeProps(
                 width={{child_node.width}},
-                lsb={{child_node.lsb}},
-                msb={{child_node.msb}},
-                low={{child_node.low}},
-                high={{child_node.high}}),
+                lsb={{child_node.lsb}}, msb={{child_node.msb}},
+                low={{child_node.low}}, high={{child_node.high}}),
             misc_props=FieldMiscProps(
                 default={{get_field_default_value(child_node)}},
                 is_volatile={{child_node.is_hw_writable}}),
@@ -76,16 +75,6 @@ class {{node.python_class_name}}({{node.base_class(asyncoutput)}}):
     def accesswidth(self) -> int:
         return {{get_reg_accesswidth(node.instance)}}
 
-    @property
-    def fields(self) -> Iterator[Union[Field{% if asyncoutput %}Async{% endif %}ReadOnly, Field{% if asyncoutput %}Async{% endif %}WriteOnly,Field{% if asyncoutput %}Async{% endif %}ReadWrite]]:
-        """
-        generator that produces has all the fields within the register
-        """
-        {% for child_node in get_reg_fields(node.instance) -%}
-        yield self.{{safe_node_name(child_node)}}
-        {% endfor %}
-        # Empty generator in case there are no children of this type
-        if False: yield
 
 
     {% if node.write_only %}
@@ -123,6 +112,8 @@ class {{node.python_class_name}}({{node.base_class(asyncoutput)}}):
     {{ udp_property(node) }}
 
     {{ universal_properties(node.instance) }}
+
+    {{ field_children_iterator(node) }}
 
     {%- if node.instance.is_array %}
 class {{node.python_class_name}}_array({{node.base_class(asyncoutput)}}Array):
