--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -67,7 +67,7 @@ from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import Read
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import ReadableMemory{% if legacy_block_access %}Legacy{% endif %}, WritableMemory{% if legacy_block_access %}Legacy{% endif %}
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import ReadableRegisterArray, WriteableRegisterArray
 {%- endif %}
-from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import FieldSizeProps, FieldMiscProps
+
 
 {% if asyncoutput %}
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import AsyncCallbackSet, AsyncCallbackSetLegacy
@@ -75,21 +75,14 @@ from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import Asyn
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import NormalCallbackSet, NormalCallbackSetLegacy
 {% endif %}
 
-{% if uses_enum %}
-{%- for enum_needed in unique_enums %}
-from .{{top_node.inst_name}}_field_enums import {{get_fully_qualified_enum_type(enum_needed)}}_enumcls
-{% endfor %}
-{% endif %}
-
 {% for property_enum in unique_property_enums %}
 from .{{top_node.inst_name}}_property_enums import {{property_enum.type_name}}_property_enumcls
 {% endfor %}
 
-{%- for unique_node in unique_fields -%}
-from .{{top_node.inst_name}}_fields import {{unique_node.python_class_name}}
+{%- for node in dependent_registers -%}
+from .registers import {{node.python_class_name}}
 {% endfor %}
 
-{% from 'addrmap_register.py.jinja' import register_class with context %}
 {% from 'addrmap_memory.py.jinja' import memory_class with context %}
 {% from 'reg_definitions.py.jinja' import register_class_attributes with context %}
 {% from 'addrmap_udp_property.py.jinja' import udp_property with context %}
@@ -295,9 +288,7 @@ class {{node.python_class_name}}_array({% if asyncoutput %}Async{% endif %}Addre
 {%- for unique_node in unique_components -%}
 {# the get_dependent_component already strips out hidden items so there is no need to check here
    for hidden items #}
-    {% if isinstance(unique_node.instance, systemrdlRegNode) %}
-    {{ register_class(unique_node)  }}
-    {% elif isinstance(unique_node.instance, systemrdlRegfileNode) %}
+    {% if isinstance(unique_node.instance, systemrdlRegfileNode) %}
     {{ regfile_class(unique_node) }}
     {% elif isinstance(unique_node.instance, systemrdlAddrmapNode) %}
     {{ addrmap_class(unique_node) }}
