--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -532,26 +532,25 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
 
                 {% if node.is_sw_readable %}
                 # read back test
-                {%- for value_of_enum_needed in node.get_property('encode') -%}
-                # set the simulated read_back value to {{value_of_enum_needed.name.upper()}}
-                random_reg_value = random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}} + 1)
-                read_callback_mock.reset_mock()
-                {% if node.msb == node.high -%}
-                read_callback_mock.return_value = (random_reg_value & {{get_field_inv_bitmask_hex_string(node)}}) | \
-                                                  ({{get_field_bitmask_hex_string(node)}} & ({{value_of_enum_needed.value}} << {{node.low}} ))
-                {% else -%}
-                read_callback_mock.return_value = (random_reg_value & {{get_field_inv_bitmask_hex_string(node)}}) | \
-                                                  ({{get_field_bitmask_hex_string(node)}} & (self._reverse_bits(value={{value_of_enum_needed.value}}, number_bits={{node.width}}) << {{node.low}} ))
-                {% endif -%}
+                for enum_name, enum_value in ({% for enum_entry in node.get_property('encode') %}('{{enum_entry.name.upper()}}',{{enum_entry.value}}),{% endfor %}):
+                    random_reg_value = random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}} + 1)
+                    read_callback_mock.reset_mock()
+                    {% if node.msb == node.high -%}
+                    read_callback_mock.return_value = (random_reg_value & {{get_field_inv_bitmask_hex_string(node)}}) | \
+                                                      ({{get_field_bitmask_hex_string(node)}} & (enum_value << {{node.low}} ))
+                    {% else -%}
+                    read_callback_mock.return_value = (random_reg_value & {{get_field_inv_bitmask_hex_string(node)}}) | \
+                                                      ({{get_field_bitmask_hex_string(node)}} & (self._reverse_bits(value=enum_value, number_bits={{node.width}}) << {{node.low}} ))
+                    {% endif -%}
 
-                self.assertEqual({% if asyncoutput %}await {%endif %}self.dut.{{'.'.join(get_python_path_segments(node))}}.read(), # type: ignore[union-attr]
-                                 self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls.{{value_of_enum_needed.name.upper()}} # type: ignore[attr-defined]
-                                 )
-                read_callback_mock.assert_called_once_with(
-                                    addr={{node.parent.absolute_address}},
-                                    width={{node.parent.size * 8}},
-                                    accesswidth=self.dut.{{'.'.join(get_python_path_segments(node))}}.parent_register.accesswidth) # type: ignore[union-attr]
-                {% endfor %}
+                    self.assertEqual({% if asyncoutput %}await {%endif %}self.dut.{{'.'.join(get_python_path_segments(node))}}.read(), # type: ignore[union-attr]
+                                     self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls[enum_name] # type: ignore[attr-defined]
+                                     )
+                    read_callback_mock.assert_called_once_with(
+                                        addr={{node.parent.absolute_address}},
+                                        width={{node.parent.size * 8}},
+                                        accesswidth=self.dut.{{'.'.join(get_python_path_segments(node))}}.parent_register.accesswidth) # type: ignore[union-attr]
+
 
                 {# only run this if there are field values that are not part of the enum #}
                 {% if node.get_property('encode').__len__() < (2**node.width) %}
